Fix Chrome alignment issue on nav

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -70,14 +70,13 @@ body {
   text-decoration: none;
   color: var(--text);
   position: relative;
-  max-width: fit-content;
 }
 
 .nb-active::after {
   content: '';
   position: absolute;
   left: 0;
-  top: 1.9rem;
+  top: 2rem;
   width: 100%;
   height: 4px;
   background-color: var(--dark);
@@ -126,6 +125,9 @@ body {
 
   .nb-mobile-toggle[aria-expanded="true"] {
     background-image: url(./images/close-menu.png);
+  }
+  .nb-primary a {
+    max-width: fit-content;
   }
 }
 
